[gd_scene load_steps=2 format=3 uid="uid://dk06wmmd3pmd"]

[ext_resource type="Script" uid="uid://dxvfqlio2hywh" path="res://Camera/camera_area.gd" id="1_bj1e0"]

[node name="CameraArea" type="Area2D"]
collision_layer = 0
input_pickable = false
monitorable = false
script = ExtResource("1_bj1e0")

[connection signal="body_entered" from="." to="." method="_on_CameraArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CameraArea_body_exited"]
